[gd_scene load_steps=4 format=3 uid="uid://eb4juwgbt8xy"]

[ext_resource type="Script" path="res://scenes/kanban/kanban_column.gd" id="1_vwnu7"]
[ext_resource type="Texture2D" uid="uid://blwb2q51rks62" path="res://addons/google_material/delete_20dp_FILL1_wght400_GRAD0_opsz20.svg" id="2_vekcb"]
[ext_resource type="Texture2D" uid="uid://dc32ew4brst2r" path="res://addons/google_material/splitscreen_add_20dp_FILL0_wght400_GRAD0_opsz20.svg" id="4_itloi"]

[node name="KanbanColumn" type="PanelContainer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"KanbanColumn"
script = ExtResource("1_vwnu7")
metadata/_edit_vertical_guides_ = [-111.0]

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="KanbanColumnHeader" type="MarginContainer" parent="BoxContainer"]
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="BoxContainer/KanbanColumnHeader"]
layout_mode = 2

[node name="Name" type="LineEdit" parent="BoxContainer/KanbanColumnHeader/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Test Test"
expand_to_text_length = true

[node name="DeleteButton" type="Button" parent="BoxContainer/KanbanColumnHeader/FlowContainer"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
icon = ExtResource("2_vekcb")
icon_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="TaskContainer" type="VBoxContainer" parent="BoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddTaskButton" type="Button" parent="BoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
icon = ExtResource("4_itloi")
icon_alignment = 1

[connection signal="pressed" from="BoxContainer/ScrollContainer/MarginContainer/VBoxContainer/AddTaskButton" to="." method="_on_add_task_button_pressed"]
